# OpenGlEarthAndMoon

./: CMakeLists.txt  OpenGlEarthAndMoon.sln  OpenGlEarthAndMoon.vcxproj  OpenGlEarthAndMoon.vcxproj.filters  README.md
Include/: Control.h  Globals.h  Objects.h  Shader.h
Shaders/: Shader.frag  Shader.vert
Src/: Control.cpp  Globals.cpp  Main.cpp  Objects.cpp  Shader.cpp
